    to specify a callback for the task submitting the unpartitioning
  * New tool starpu_mpi_comm_trace.py to draw heatmap of MPI
    communications
  * Support for ARM performance libraries
  * Add functionality to disable signal catching either through field
    starpu_conf::catch_signals or through the environment variable
    STARPU_CATCH_SIGNALS
  * Support for OpenMP Taskloop directive

Changes:
  * Vastly improve simgrid simulation time.
  * Switch default scheduler to lws.
  * Add "to" parameter to pull_task and can_push methods of
    components.
  * Deprecate starpu_data_interface_ops::handle_to_pointer interface
    operation in favor of new starpu_data_interface_ops::to_pointer
    operation.
  * Sort data access requests by priority.
  * Cluster support is disabled by default, unless the configure
    option --enable-cluster is specified

Small changes:
  * Use asynchronous transfers for task data fetches with were not prefetched.
  * Allow to call starpu_sched_ctx_set_policy_data on the main
    scheduler context
  * Fonction starpu_is_initialized() is moved to the public API.
  * Fix code to allow to submit tasks to empty contexts
  * STARPU_COMM_STATS also displays the bandwidth

StarPU 1.2.9 (git revision xxx)
==============================================
  * Add STARPU_SIMGRID_TRANSFER_COST environment variable to easily disable
    data transfer costs.

StarPU 1.2.8 (git revision f66374c9ad39aefb7cf5dfc31f9ab3d756bcdc3c)
==============================================

Small features:
  * Minor fixes

StarPU 1.2.7 (git revision 07cb7533c22958a76351bec002955f0e2818c530)
==============================================

Small features:
  * Add STARPU_HWLOC_INPUT environment variable to save initialization time.
  * Add starpu_data_set/get_ooc_flag.

StarPU 1.2.6 (git revision 23049adea01837479f309a75c002dacd16eb34ad)
==============================================

Small changes:
  * Fix crash for lws scheduler