@@ -277,6 +277,7 @@ static struct starpu_data_interface_ops interface_vector_cpp_ops =
 	.register_data_handle = register_vector_cpp_handle,
 	.allocate_data_on_node = allocate_vector_cpp_buffer_on_node,
 	.free_data_on_node = free_vector_cpp_buffer_on_node,
+	.init = NULL,
 	.copy_methods = &vector_cpp_copy_data_methods_s,
 	.handle_to_pointer = NULL,
 	.to_pointer = vector_cpp_to_pointer,
@@ -304,6 +305,7 @@ static struct starpu_data_interface_ops interface_vector_cpp_ops =
 	register_vector_cpp_handle,
 	allocate_vector_cpp_buffer_on_node,
 	free_vector_cpp_buffer_on_node,
+	NULL,
 	&vector_cpp_copy_data_methods_s,
 	vector_cpp_to_pointer,
 	vector_cpp_pointer_is_inside,
